--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.env.development
+.env.test
+
 # compiled output
 /dist
 /node_modules
@@ -35,3 +38,4 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 db.sqlite
+test.sqlite
